--- a/apcs-create-task/styles/style.css
+++ b/apcs-create-task/styles/style.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(114, 76, 76, 0.87);
+  background-color:#DB7A65 }
 
 
 body {
@@ -21,19 +21,30 @@ h1 {
   line-height: 1.1;
 }
 
-.card {
-  padding: 2em;
+.book-card {
+  width: 500px;
+  padding: 10px;
+  margin: 10px auto;
+  text-align: center;
+  background-color: antiquewhite;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
+.image {
+  height: 30vh;
+  border-radius: 1rem;}
 
-
-button {
+.btn {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #FEFEFE;
   cursor: pointer;
   transition: border-color 0.25s;
 }
