--- a/apcs-create-task/styles/style.css
+++ b/apcs-create-task/styles/style.css
@@ -44,7 +44,7 @@ h1 {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #FEFEFE;
+  background-color: #999090;
   cursor: pointer;
   transition: border-color 0.25s;
 }
